Submission 2 - Initial needed gradle - Show data from API - Implementation View Model with Live Data - Implementation Dependencies Injection - Update unit testing and Instrument test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="text_popularity">Popularity</string>
     <string name="text_created_by">Created By</string>
     <string name="text_genres">Genres</string>
+    <string name="text_please_wait">Harap tunggu…</string>
 </resources>
