--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="text_created_by">Created By</string>
     <string name="text_genres">Genres</string>
     <string name="text_please_wait">Harap tunggu…</string>
+    <string name="text_favorite">Favorites</string>
 </resources>
