Show movie and tv show favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="text_genres">Genres</string>
     <string name="text_please_wait">Harap tunggu…</string>
     <string name="text_favorite">Favorites</string>
+    <string name="text_no_favorites">No Favorite Items</string>
 </resources>
